Bug 639858 - Bias the profiler toward tracing scripted getters (r=dmandelin)